--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.1",
     "pg": "^8.18.0",
     "pg-hstore": "^2.3.4",
+    "razorpay": "^2.9.6",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.3"
   },
