--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "^14.2.18",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
