--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,9 @@
     "react-dom": "^18.3.1",
     "react-resizable-panels": "^2.0.19",
     "recharts": "^3.7.0",
+    "react-hook-form": "^7.51.5",
+    "zod": "^3.23.8",
+    "@hookform/resolvers": "^3.3.4",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
