--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -38,23 +39,23 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "lucide-react": "^0.562.0",
-    "next": "^14.2.18",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^12.31.0",
     "input-otp": "^1.2.4",
+    "lucide-react": "^0.562.0",
+    "next": "^14.2.18",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
     "recharts": "^3.7.0",
-    "react-hook-form": "^7.51.5",
-    "zod": "^3.23.8",
-    "@hookform/resolvers": "^3.3.4",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
