--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -24,7 +24,8 @@
     "pg-hstore": "^2.3.4",
     "razorpay": "^2.9.6",
     "sequelize": "^6.37.7",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "yahoo-finance2": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
